# password-cracker-master

./: .gitignore  Dockerfile  README.md  docker-compose.yml  hashes.txt  pyproject.toml  requirements.txt
.github/workflows/: main.yml
example_data/: hashes.txt  hashes_hard.txt  phone_numbers_generate.py
master_server/schemas/: config.py
password_cracker_master/: __init__.py  __main__.py  context.py
password_cracker_master/schemas/: config.py  db_config.py  errors.py  responses.py
password_cracker_master/server/: server.py  utils.py
password_cracker_master/server/db/: main_db.py
password_cracker_master/server/db/db_api/: dirlist_context.py  minion_signups.py  minions.py  passwords.py  tasks.py
password_cracker_master/server/models/: errors.py  minion_signup.py  minion_signup_models.py  minion_tasks.py  minions_models.py  passwords.py  passwords_models.py  responses.py  server_tasks.py  server_tasks_models.py  tasks.py
password_cracker_master/server/routes/minion_routes/: router.py  utils.py
password_cracker_master/server/routes/password_routes/: router.py  utils.py
password_cracker_master/server/routes/tasks_routes/: router.py
password_cracker_master/src/: server.py  utils.py
password_cracker_master/src/db/: main_db.py
password_cracker_master/src/db/db_api/: dirlist_context.py  files.py  minions.py  passwords.py  tasks.py
password_cracker_master/src/models/: dirlist_models.py  minions_models.py  passwords_models.py  server_tasks_models.py
password_cracker_master/src/routes/minion_routes/: router.py  utils.py
(+3 files in other folders)
