[tool.poetry]
name = "password-cracker-master"
version = "0.1.0"
description = "Password cracker"
authors = ["TomP <tomp12@protonmail.com>"]
readme = "README.md"
packages = [
    {include = "password_cracker_master"}
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"
fastapi = "^0.95.2"
motor = "^3.1.2"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"
fastapi-paginate = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
