[tool.poetry]
name = "password-cracker-master"
version = "0.1.0"
description = "Password cracker"
authors = ["TomP <tomp12@protonmail.com>"]
readme = "README.md"
packages = [
    {include = "password_cracker_master"}
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"
fastapi = "^0.95.2"
motor = "^3.1.2"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"
requests = "^2.31.0"
python-on-whales = "^0.60.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
